# TP_DirectX_M1

./: LaunchBuild.bat  README.md  TP_Project.sln - Raccourci.lnk
Project/: .gitignore  CMakeLists.txt
Project/App/: CMakeLists.txt
Project/App/CMake_Source/Public/Gen_App/Config/: AppConfig.h.in
Project/App/Source/Private/App/: main.cpp
Project/App/Source/Private/App/Handler/: WindowHandler.cpp
Project/App/Source/Private/App/Tools/Debug/: AYCDebugLayer.cpp  AYCLog.cpp
Project/App/Source/Public/App/: pch.h
Project/App/Source/Public/App/Handler/: WindowHandler.h
Project/App/Source/Public/App/Tools/Debug/: AYCDebugLayer.h  AYCLog.h
Project/Tools/: CMakeLists.txt
Project/Tools/Source/Public/Tools/: Tools.h
